--- a/package.json
+++ b/package.json
@@ -7,5 +7,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/node": "^17.0.35",
+    "eslint": "^8.16.0",
+    "tslint": "^6.1.3",
+    "typescript": "^4.7.2"
+  }
 }
